FIX all img url

--- a/templates/includes/hero.html
+++ b/templates/includes/hero.html
@@ -11,7 +11,7 @@
                 <a href="{% url 'make_reservation' %}" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">Book A Table</a>
             </div>
             <div class="col-lg-6 text-center text-lg-end overflow-hidden">
-                <img class="img-fluid" src="static/img/hero.png" alt="">
+                <img class="img-fluid" src="{% static 'img/hero.png' %}" alt="">
             </div>
         </div>
     </div>
