--- a/templates/includes/team.html
+++ b/templates/includes/team.html
@@ -10,7 +10,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="team-item text-center rounded overflow-hidden">
                     <div class="rounded-circle overflow-hidden m-4">
-                        <img class="img-fluid" src="static/img/team-1.jpg" alt="">
+                        <img class="img-fluid" src="{% static 'img/team-1.jpg' %}" alt="">
                     </div>
                     <h5 class="mb-0">Full Name</h5>
                     <small>Designation</small>
@@ -24,7 +24,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="team-item text-center rounded overflow-hidden">
                     <div class="rounded-circle overflow-hidden m-4">
-                        <img class="img-fluid" src="static/img/team-2.jpg" alt="">
+                        <img class="img-fluid" src="{% static 'img/team-2.jpg' %}" alt="">
                     </div>
                     <h5 class="mb-0">Full Name</h5>
                     <small>Designation</small>
@@ -38,7 +38,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="team-item text-center rounded overflow-hidden">
                     <div class="rounded-circle overflow-hidden m-4">
-                        <img class="img-fluid" src="static/img/team-3.jpg" alt="">
+                        <img class="img-fluid" src="{% static 'img/team-3.jpg' %}" alt="">
                     </div>
                     <h5 class="mb-0">Full Name</h5>
                     <small>Designation</small>
@@ -52,7 +52,7 @@
             <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                 <div class="team-item text-center rounded overflow-hidden">
                     <div class="rounded-circle overflow-hidden m-4">
-                        <img class="img-fluid" src="static/img/team-4.jpg" alt="">
+                        <img class="img-fluid" src="{% static 'img/team-4.jpg' %}" alt="">
                     </div>
                     <h5 class="mb-0">Full Name</h5>
                     <small>Designation</small>
